--- a/public/poly_modules/my_components/content-page.html
+++ b/public/poly_modules/my_components/content-page.html
@@ -2,17 +2,18 @@
 <link rel="import" href="../bower_components/core-animation/core-animation.html">
 <link rel="import" href="../bower_components/core-image/core-image.html">
 <link rel="import" href="../bower_components/core-icon/core-icon.html">
+<link rel="import" href="../bower_components/core-icon-button/core-icon-button.html">
 
-<polymer-element name="content-page" attributes="group groupId contentWidth" horizontal layout>
+<polymer-element name="content-page" attributes="group groupId" horizontal layout>
 <template>
 	<style>
 		:host{
 			display: block;
 			/*position: absolute;
 			top: 0;
-			left: 0;*/
-			width: {{contentWidth}}px;
-			height: 700px;
+			left: 0;*/			
+			width: 100%;
+			height: 900px;
 			background-color: rgba(250,250,250,1);
 			z-index: 20000;
 		}
@@ -26,18 +27,18 @@
 			overflow: auto;	
 		}*/
 
-		/*.wrapper {			
-			position: relative;
-			width: 740px;
-			height: 100%;								
-			margin: 0 auto;				
-		}*/
+		.wrapper {			
+			width: 100%;
+			height: 100%;
+			background-color: rgba(250,250,250,1);
+		}
 
 		.content {
 			overflow: hidden;
 			font-size: 16px;
+			background-color: rgba(250,250,250,1);
 			color: rgba(102,102,102,1);
-			line-height: 24px;
+			line-height: 24px;						
 		}		
 
 		core-image {
@@ -130,8 +131,11 @@
 		}
 	</style>
 	<!-- <div id="scrollWrapper" vertical layout> -->
-		<div class="wrapper" flex vertical center center-justified layout hero-id="group-{{groupId}}" hero>
+		<div class="wrapper" flex vertical center center-justified layout hero-id="group-{{groupId}}" hero>			
 			<div class="content" on-tap="{{back}}">
+				<div horizontal layout>
+					<core-icon-button icon="forward"></core-icon-button>
+				</div>
 				<iframe width="960" height="540" src="https://www.youtube.com/embed/MbdT7DIn1lM" frameborder="0" allowfullscreen></iframe> 
 				<!-- <core-image sizing="cover" src="{{group.img}}" groupId="{{groupId}}"></core-image> -->
 				<div class="details" vertical layout>
