--- a/public/poly_modules/my_components/list-cards.html
+++ b/public/poly_modules/my_components/list-cards.html
@@ -1,7 +1,7 @@
 <link rel="import" href="../my_components/content-page.html">
 <link rel="import" href="../my_components/video-card.html">
 
-<polymer-element name="list-cards" attributes="groups fireToggle" center-justified vertical layout>
+<polymer-element name="list-cards" attributes="groups fireToggle cardWidth" center-justified vertical layout>
 <template>
 	<style>
 		:host {
@@ -15,7 +15,7 @@
 			position: absolute;
 			width: 100%;
 			height: 100%;
-			top: 100px;
+			top: 0;
 		}		
 
 		 #noscroll {
@@ -36,8 +36,8 @@
 
 		content-page {
 			position: absolute;
-			top: 0;				
-			right: -1100px;
+			top: -200px;				
+			right: -1100px;			
 		}
 	</style>
 	<div class="main-panel" center-justified vertical layout>		
@@ -45,13 +45,13 @@
 			<div id="noscroll" fit hero-p>
 				<div class="item-list" flex horizontal around-justified layout wrap>			
 					<template repeat="{{group, i in groups}}">							
-						<video-card cardWidth="{{cardWidth}}" groups="{{groups}}" group="{{group}}" groupId="{{i}}" on-card-tapped="{{changePage}}"></video-card>
+						<video-card cardWidth="{{cardWidth}}" groups="{{groups}}" group="{{group}}" groupId="{{i}}" on-card-tapped="{{changePage}}" selectedGroup="{{selectedGroup}}"></video-card>
 					</template>					
 				</div>
 			</div>
 		</section>				
 	</div>
-	<content-page id="contentPage" on-content-back="{{changePage}}" group="{{selectedGroup}}" groupId="{{group_id}}" contentWidth="{{contentWidth}}"></content-page> 	
+	<content-page id="contentPage" on-content-back="{{changePage}}" group="{{selectedGroup}}" groupId="{{group_id}}" hidden></content-page> 	
 </template>
 <script>
 	Polymer('list-cards', {
@@ -60,11 +60,11 @@
 		groups: [],		
 		player: false,		
 		isOpened: true,			
-		fireToggle: true,				
-		contentWidth: 1100,			
+		fireToggle: true,	
+		selectedGroup: [],					
 
 		created: function() {
-			
+			this.selectedGroup = [];	
 		},
 
 		transitionend: function(e) {
@@ -73,9 +73,9 @@
 
 		fireToggleChanged: function() {
 			this.changePage();
-		},
+		},		
 
-		changePage: function() {
+		changePage: function(event) {			
 			if(this.selected===0) {
 				this.selected = 1;				
 			} else {
@@ -92,7 +92,9 @@
 			
 			var animation = new CoreAnimation();			
 			animation.addEventListener("core-animation-finish", function() {				
-								
+				if(that.isOpened){
+					that.$.contentPage.setAttribute("hidden", null);
+				}				
 			});
 			animation.duration = 400;
 			animation.easing = "ease-in-out";
@@ -101,11 +103,12 @@
 				{right: "-1100px"}
 			];
 			animation.fill = "forwards";
-			if(this.isOpened){
+			if(this.isOpened){				
+				this.$.contentPage.removeAttribute("hidden");
 				animation.direction = "reverse";
 				this.isOpened = false;			
 				this.fire('show-content');
-			} else {
+			} else {								
 				animation.direction = "normal";
 				this.isOpened = true;				
 				this.fire('hide-content');
